tests/integration/snapshots/player/integration__player_snapshot_test__progress_bar_at_end.snap
---
source: tests/integration/player_snapshot_test.rs
expression: output
---
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 01:40/01:40
